Move @types to dependencies and update tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,9 @@
 ﻿{
   "compilerOptions": {
     "target": "ES2022",
-    "module": "CommonJS",
-    "lib": ["ES2022"],
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
+    "lib": ["ES2023", "DOM"],
     "outDir": "./dist",
     "rootDir": "./",
     "strict": true,
@@ -10,7 +11,8 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
-    "typeRoots": ["./node_modules/@types"]
+    "types": ["node"],
+    "sourceMap": true
   },
   "include": ["**/*.ts"],
   "exclude": ["node_modules", "dist"]
