--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "dev": "nodemon --exec ts-node index.ts",
-    "build": "npm install && tsc --skipLibCheck",
+    "build": "tsc --skipLibCheck",
     "start": "node dist/index.js"
   },
   "keywords": [],
@@ -20,9 +20,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.3",
     "uuid": "^9.0.1",
-    "zod": "^3.22.4"
-  },
-  "devDependencies": {
+    "zod": "^3.22.4",
     "@types/bcryptjs": "^2.4.6",
     "@types/cookie-parser": "^1.4.10",
     "@types/cors": "^2.8.19",
@@ -31,7 +29,9 @@
     "@types/multer": "^2.0.0",
     "@types/node": "^20.19.33",
     "@types/sharp": "^0.31.1",
-    "@types/uuid": "^9.0.7",
+    "@types/uuid": "^9.0.7"
+  },
+  "devDependencies": {
     "nodemon": "^3.0.2",
     "ts-node": "^10.9.1",
     "typescript": "^5.3.3"
