--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "dev": "nodemon --exec ts-node index.ts",
-    "build": "tsc --skipLibCheck",
+    "build": "tsc --skipLibCheck && cp -r data dist/",
     "start": "node dist/index.js"
   },
   "keywords": [],
